--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <h1>Polyglot 🦜 💬 🇬🇧 ➡️ 🏴‍☠️</h1>
-    <p>Translate English into Pirate speak...</p>
+    <p>Add extra to input</p>
     <input type="text" name="english" id="english" placeholder="Type English here..." />
     <button py-click="translate_english">Translate</button>
     <div id="output"></div>
