--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <div id="output"></div>
     <script type="py" src="./main.py" config="./pyscript.json"></script>
 
+    <script type="py" terminal worker>
+        name = input("What is your name? ")
+        print(f"Hello, {name}")
+    </script>
+
+
 
 </body>
 
