--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <script type="py" src="./main.py" config="./pyscript.json"></script>
 
     <script type="py" terminal worker>
-        name = input("What is your name? ")
-        print(f"Hello, {name}")
+        import code
+        code.interact()
     </script>
 
 
