--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <button py-click="translate_english">Translate</button>
     <div id="output"></div>
     <script type="py" src="./main.py" config="./pyscript.json"></script>
-
-    <script type="py" terminal worker>
+    <hr>
+    <script type="mpy" terminal worker>
         import code
         code.interact()
     </script>
