--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="output"></div>
     <script type="py" src="./main.py" config="./pyscript.json"></script>
     <hr>
-    <script type="mpy" terminal worker>
+    <script type="py" terminal worker>
         import code
         code.interact()
     </script>
