--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <h1>Polyglot 🦜 💬 🇬🇧 ➡️ 🏴‍☠️</h1>
+    <h1>Testing</h1>
     <p>Add extra to input</p>
     <input type="text" name="english" id="english" placeholder="Type English here..." />
     <button py-click="translate_english">Translate</button>
