--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     <div id="output"></div>
     <script type="py" src="./main.py" config="./pyscript.json"></script>
     <hr>
-    <script type="py" terminal worker>
-        import code
-        code.interact()
+    <script type="py-editor">
+      import sys
+      print(sys.version)
     </script>
+
 
 
 
